# EASE_v1

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  partition_table.csv  sdkconfig  sdkconfig.old
Ease_firmware/: CMakeLists.txt  cppcheck_report.xml  custom_part.csv  sdkconfig  sdkconfig.old  serial_no.txt  t.txt  test.sh
Ease_firmware/main/: CMakeLists.txt  main.c  test.c  test.h
Ease_firmware/main/sources/ads/: ads.c  ads.h
Ease_firmware/main/sources/ble/: ble.c  ble.h
Ease_firmware/main/sources/fuel_gauge/: fuel_gauge.c  fuel_guage.h
Ease_firmware/main/sources/nvs/: nvs.c  nvs_lib.h
Ease_firmware/main/sources/system/: system.c  system.h
Ease_firmware/main/sources/tdcs/: tdcs.c  tdcs.h
Ease_firmware/main/sources/time/: time.c  time.h
doc/: Ble_module.md  EEG_lib.md  Fuel_gauge_lib.md  TDCS_lib.md  build_tools.md  (+4 more)
main/: CMakeLists.txt  helper.h  main.c
main/libs/app_desc/: app_desc.c  app_desc.h
main/libs/batt/: batt.c  batt.h  batt_regs.h
main/libs/ble/: ble.c  ble.h  ble_uuid.c
main/libs/eeg/: eeg.c  eeg.h  eeg_regs.h
main/libs/flash_op/: flash_op.c  flash_op.h  flash_op_private.h  flash_ota_meta_private.h  flash_otameta_data.c  flash_otameta_data.h  flash_partitions.c
main/libs/led/: led.c  led.h  ledc_private.h
main/libs/led/old_driver/: led.c  led.h
main/libs/led/old_drver/: led.c
main/libs/system/: sys_attr.h  system.c  system_attr.c  system_attr.h
main/libs/tdcs/: tdcs.c  tdcs.h  tdcs_adc.c  tdcs_adc_new_drv.txt  tdcs_regs.h  waveform_types.c
main/libs/time/: esp_time.c  esp_time.h
(+6 files in other folders)
